k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: room-mgmt
  namespace: ase-1
spec:
  selector:
    app.kubernetes.io/name: room-mgmt
  ports:
    - name: http
      port: 80
      targetPort: 8080
